CODA-93 - Fix dropdown z-index

--- a/src/components/Navigation/styles/_submenu.scss
+++ b/src/components/Navigation/styles/_submenu.scss
@@ -2,6 +2,7 @@
     display: none;
     position: absolute;
     background-color: transparent;
+    z-index: $zlayer-top;
 
     &__content {
         padding: 10px;
